# pili-crm

./: .env.example  .gitignore  01_scope.md  02_entities.md  03_integrations.md  04_current_stack.md  06_open_questions.md  06_open_questions_archive.md  07_glossary.md  CLAUDE.md  README.md  com.pilistrogai.fastapi.plist  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.json
alembic/: env.py
analysis/: __init__.py  chunking.py  identity_extract.py  import_preflight_from_toolshop.py  llm_client.py  matching.py  prompts.py  run.py  state_check.py
app/: config.py  database.py  llm_studio_control.py  main.py
crm-mcp/: .env.example  IMPROVEMENTS.md  README.md  db.py  pyproject.toml  server.py  test_tools.py
crm-mcp/tools/: __init__.py  add_to_stock.py  apply_identity_update.py  apply_pending_analysis.py  create_customer.py  create_order.py  find_customer.py  get_current_exchange_rate.py  get_message_template.py  get_unreviewed_chats.py  link_chat_to_customer.py  list_customers.py  list_draft_orders.py  list_pending_identity_updates.py  list_pending_price_resolutions.py  match_shipment.py  pending_orders.py  receive_stock.py  resolve_price_resolution.py  search_products.py  set_exchange_rate.py  update_customer.py  update_order.py  update_order_item_status.py  verify_draft_order.py
docs/: PLAN.md  adr-template.md  cowork-smoke-test-runbook.md  cowork-system-prompt.md  first_run_instructions.md  inbox_measurement.md  runbook_fastapi_autostart.md  runbook_pc_deployment.md  runbook_sync_pc_analyses.md  schema-gaps.md  testing.md  tool-gaps.md
ingestion/: .gitignore  README.md  __init__.py  backfill_media_metadata.py  parser.py  register_account.py  tg_import.py
scripts/: README.md  seed_mvp.py  setup_test_db.sh  sync_pc_analyses.sh
tests/: README.md  conftest.py  test_adr_009_migration.py  test_adr_010_reply_column_migration.py  test_adr_011_migration.py  test_adr_012_migration.py  test_seed.py  (+18 more)
(+159 files in other folders)
